modification scss FicheLogement pour responsive

--- a/kasa/src/components/Collaps/Collaps.scss
+++ b/kasa/src/components/Collaps/Collaps.scss
@@ -1,7 +1,7 @@
 .CollapseItem {
   display: flex;
   flex-direction: column;
-  width: 1023px;
+  // width: 1023px;
   display: flex;
   flex-direction: column;
   margin-bottom: 30px;
