--- a/kasa/src/components/Slideshow/Slideshow.scss
+++ b/kasa/src/components/Slideshow/Slideshow.scss
@@ -54,7 +54,7 @@
 @media screen and (max-width: 376px) {
   .slideshow {
     width: 335px;
-    // height: 255px;
+    height: 255px;
     margin: auto;
     .prev img,
     .next img {
