--- a/kasa/src/components/Star/Star.scss
+++ b/kasa/src/components/Star/Star.scss
@@ -1,9 +1,9 @@
 .star-global {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
-  width: 196px;
-  margin-left: 1150px;
+  // justify-content: flex-end;
+  // width: 196px;
+  // margin-left: 1150px;
   margin: 0;
 }
 .star {
