Suite responsive FicheLogement

--- a/kasa/src/components/Slideshow/Slideshow.scss
+++ b/kasa/src/components/Slideshow/Slideshow.scss
@@ -4,7 +4,15 @@
   align-items: center;
   justify-content: center;
   max-width: 1240px;
+  height: 415px;
   margin-left: 100px;
+
+  img {
+    width: 100%;
+    height: auto;
+    border-radius: 25px;
+    object-fit: cover;
+  }
   .prev {
     position: absolute;
     left: 25px;
@@ -31,13 +39,6 @@
       width: 46px;
       height: 79px;
     }
-  }
-
-  img {
-    width: 100%;
-    height: 415px;
-    border-radius: 25px;
-    object-fit: cover;
   }
 
   .counter {
