--- a/kasa/src/components/Star/Star.scss
+++ b/kasa/src/components/Star/Star.scss
@@ -25,7 +25,11 @@
 }
 
 @media screen and (max-width: 376px) {
-  .star .star-vide {
+  .star {
     left: 20px;
+    font-size: 18px;
+  }
+  .star-vide {
+    font-size: 18px;
   }
 }
