--- a/kasa/src/views/NoMatch/NoMatch.scss
+++ b/kasa/src/views/NoMatch/NoMatch.scss
@@ -43,6 +43,7 @@
     .page-inconnue {
       width: 260px;
       font-size: 18px;
+      font-weight: 500px;
     }
     .back-home {
       font-size: 14px;
