--- a/kasa/src/index.scss
+++ b/kasa/src/index.scss
@@ -1,16 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200&family=Montserrat:wght@200&display=swap");
 body {
   font-family: "Montserrat", sans-serif;
-  margin: 0;
+  margin: auto;
 }
 .main {
   max-width: 1440px;
-  margin: auto;
+  // margin: 20px;
 }
-@media screen and (max-width: 376px) {
-  body {
-    // display: flex;
-    // justify-content: center;
-    margin: 0;
-  }
-}
+// @media screen and (max-width: 376px) {
+//   body {
+//     // display: flex;
+//     // justify-content: center;
+//   }
+// }
