--- a/kasa/src/views/APropos/APropos.scss
+++ b/kasa/src/views/APropos/APropos.scss
@@ -1,8 +1,12 @@
 // ! intégration de APropos ds main
 
 .APropos {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
   max-width: 1023px;
   margin: 38px auto;
+  box-shadow: none;
 }
 @media screen and (max-width: 376px) {
   .APropos {
