--- a/kasa/src/components/Card/Card.scss
+++ b/kasa/src/components/Card/Card.scss
@@ -5,28 +5,38 @@
 
 .Card {
   position: relative;
-  border-radius: 25px;
+  border-radius: 10px;
   overflow: hidden;
   width: 100%;
   height: 340px;
+  // background: linear-gradient(
+  //   to bottom,
+  //   rgba(4, 231, 57, 0) 0%,
+  //   rgba(240, 10, 225, 0.5) 100%
+  // );
 
   .CardImage {
     width: 100%; // La largeur de l'image doit être de 100% du conteneur
     height: 100%;
     object-fit: cover;
-    // background: linear-gradient(0deg, #eb0a0a, #08ed5c);
+
+    background: linear-gradient(
+      to bottom,
+      rgba(4, 231, 57, 0) 0%,
+      rgba(240, 10, 225, 0.5) 100%
+    );
   }
+}
+h3 {
+  position: absolute;
+  top: 80%; // Centrer verticalement le titre
+  color: white;
+  font-size: 18px;
+  text-align: left;
+  margin-left: 20px;
+}
+@media screen and (max-width: 376px) {
   h3 {
-    position: absolute;
-    top: 80%; // Centrer verticalement le titre
-    color: white;
-    font-size: 18px;
-    text-align: left;
-    margin-left: 20px;
-  }
-  @media screen and (max-width: 376px) {
-    h3 {
-      top: 75%;
-    }
+    top: 75%;
   }
 }
