Ajustements scss en responsive sur FicheLogement

--- a/kasa/src/components/Star/Star.scss
+++ b/kasa/src/components/Star/Star.scss
@@ -25,6 +25,9 @@
 }
 
 @media screen and (max-width: 376px) {
+  .star-global {
+    align-items: center;
+  }
   .star {
     left: 20px;
     font-size: 18px;
