--- a/kasa/src/components/Collaps/Collaps.scss
+++ b/kasa/src/components/Collaps/Collaps.scss
@@ -2,9 +2,14 @@
   display: flex;
   flex-direction: column;
   // width: 1023px;
+  width: auto;
   display: flex;
   flex-direction: column;
   // margin-bottom: 30px;
+  h2 {
+    font-size: 24px;
+    color: white;
+  }
 }
 
 .CollapseHeader {
@@ -31,10 +36,7 @@ ul {
   padding-left: 0;
   margin: 0;
 }
-h2 {
-  font-size: 24px;
-  color: white;
-}
+
 .Arrow img {
   width: 32px;
   height: 32px;
