--- a/kasa/src/views/Home/Home.scss
+++ b/kasa/src/views/Home/Home.scss
@@ -9,13 +9,13 @@ section.Appart {
   border-radius: 25px;
   padding: 56px;
   margin: 100px;
-  .Card {
-    background: linear-gradient(
-      180deg,
-      rgba(4, 231, 57, 0) 0%,
-      rgba(240, 10, 225, 0.5) 100%
-    );
-  }
+  // .Card {
+  //   background: linear-gradient(
+  //     180deg,
+  //     rgba(4, 231, 57, 0) 0%,
+  //     rgba(240, 10, 225, 0.5) 100%
+  //   );
+  // }
 }
 
 @media screen and (max-width: 376px) {
