Modification composant Star (type d'étoiles)

--- a/kasa/src/components/Star/Star.scss
+++ b/kasa/src/components/Star/Star.scss
@@ -13,14 +13,14 @@
   // left: 1190px;
   // position: relative;
   bottom: 50px;
-  color: #ff6060;
+  // color: #ff6060;
   font-size: 36px;
 }
 .star-vide {
   // position: relative;
   // left: 1190px;
   bottom: 50px;
-  color: #e3e3e3;
+  // color: #e3e3e3;
   font-size: 36px;
 }
 
