--- a/kasa/src/components/Card/Card.scss
+++ b/kasa/src/components/Card/Card.scss
@@ -9,38 +9,29 @@
   overflow: hidden;
   width: 100%;
   height: 340px;
-  background: linear-gradient(
-    180deg,
-    rgba(4, 231, 57, 0) 0%,
-    rgba(231, 12, 191, 0.5) 100%
-    
-  );
-  z-index: 1;
 
   .CardImage {
     width: 100%; // La largeur de l'image doit être de 100% du conteneur
     height: 100%;
     object-fit: cover;
+    position: relative;
+  
 
-    // background: linear-gradient(
-    //   to bottom,
-    //   rgba(4, 231, 46, 0) 0%,
-    //   rgba(240, 10, 225, 0.5) 100%
-    // );
-    z-index: 2;
+    // filter: brightness(70%);
   }
-}
-h3 {
-  position: absolute;
-  top: 80%; // Centrer verticalement le titre
-  color: white;
-  font-size: 18px;
-  text-align: left;
-  margin-left: 20px;
-  z-index: 3;
-}
-@media screen and (max-width: 376px) {
+
   h3 {
-    top: 75%;
+    position: absolute;
+    top: 80%; // Centrer verticalement le titre
+    color: white;
+    font-size: 18px;
+    text-align: left;
+    margin-left: 20px;
+    z-index: 3;
+  }
+  @media screen and (max-width: 376px) {
+    h3 {
+      top: 75%;
+    }
   }
 }
