--- a/kasa/src/components/Collaps/Collaps.scss
+++ b/kasa/src/components/Collaps/Collaps.scss
@@ -49,33 +49,33 @@ ul {
     .CollapseContent {
       display: flex;
       flex-direction: column;
-      // flex-wrap: wrap;
-      // width: 100%;
-      // justify-content: space-between;
-      // width: 335px;
-      // height: 30px;
-      // margin: 20px;
     }
     .CollapseHeader {
-      justify-content: space-evenly;
+      // justify-content: space-evenly;
       width: 335px;
       height: 30px;
-      gap: 225px;
+      // gap: 225px;
       padding: 0;
       border-radius: 5px;
       box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     }
+
     h2 {
+      display: flex;
       font-size: 13px;
-      font-weight: 500px;
+      justify-content: space-between;
+      padding-left: 10px;
     }
     .CollapseContent {
       font-size: 12px;
       // box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     }
-    .Arrow img {
-      width: 16px;
-      height: 9px;
+    .Arrow {
+      display: flex;
+      justify-content: space-around;
+      padding-right: 5px;
+      // width: 16px;
+      // height: 9px;
     }
   }
 }
