--- a/kasa/src/components/Slideshow/Slideshow.scss
+++ b/kasa/src/components/Slideshow/Slideshow.scss
@@ -3,10 +3,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  max-width: 1240px;
+  // max-width: 1240px;
   // height: 415px;
   height: auto;
-  margin-left: 100px;
+  // margin-left: 100px;
 
   img {
     width: 100%;
