--- a/kasa/src/components/Card/Card.scss
+++ b/kasa/src/components/Card/Card.scss
@@ -1,6 +1,5 @@
 .card-link {
   margin: 0;
-  // width: 33%;
 }
 
 .Card {
@@ -15,11 +14,15 @@
     height: 100%;
     object-fit: cover;
     position: relative;
-  
-
-    // filter: brightness(70%);
   }
-
+  .Gradient {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    border-radius: 10px;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.00) 0%, rgba(0, 0, 0, 0.50) 100%);
+    z-index: 2;
+  }
   h3 {
     position: absolute;
     top: 80%; // Centrer verticalement le titre
@@ -29,6 +32,7 @@
     margin-left: 20px;
     z-index: 3;
   }
+
   @media screen and (max-width: 376px) {
     h3 {
       top: 75%;
