--- a/kasa/src/views/Home/Home.scss
+++ b/kasa/src/views/Home/Home.scss
@@ -3,8 +3,6 @@ section.Appart {
   grid-template-columns: 1fr 1fr 1fr;
   justify-items: center;
   gap: 50px;
-  // flex-wrap: wrap;
-  // justify-content: space-between;
   background-color: #f6f6f6;
   border-radius: 25px;
   padding: 56px;
@@ -16,16 +14,9 @@ section.Appart {
     grid-template-columns: 1fr;
     justify-content: center; // Centre les cartes si la largeur de l'écran est inférieure à 1024px
     background-color: transparent;
-    // padding-top: 27px;
-    padding: 0;
+    padding: 0 20px;
     margin: 0;
-    gap: 0;
+    gap: 20px;
+    margin-bottom: 27px;
   }
-  // .Card {
-  //   width: 335px;
-  //   height: 255px;
-  //   margin: 0 0 20px;
-  //
-
-  // }
 }
