--- a/kasa/src/views/Home/Home.scss
+++ b/kasa/src/views/Home/Home.scss
@@ -12,11 +12,14 @@ section.Appart {
 @media screen and (max-width: 376px) {
   section.Appart {
     grid-template-columns: 1fr;
-    justify-content: center; // Centre les cartes si la largeur de l'écran est inférieure à 1024px
+    justify-content: center; 
     background-color: transparent;
     padding: 0 20px;
     margin: 0;
     gap: 20px;
     margin-bottom: 27px;
+  }
+  .Card {
+    height: 255px;
   }
 }
