--- a/kasa/src/views/NoMatch/NoMatch.scss
+++ b/kasa/src/views/NoMatch/NoMatch.scss
@@ -1,22 +1,17 @@
 .element-no-found {
   color: #ff6060;
   text-align: center;
-  // display: block;
 }
 .NoMatch {
-  // display: block;
   font-size: 288px;
   margin-block-start: 139px;
-  // margin-block-end: 139px;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   font-weight: bold;
 }
 .page-inconnue {
-  // display: block;
   font-size: 36px;
-  font-weight: 600px;
-  /* margin-block-start: 36px;*/
+  font-weight: normal;
   margin-block-end: 139px;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
@@ -29,13 +24,10 @@
 @media screen and (max-width: 376px) {
   .element-no-found {
     display: flex;
-    // padding-top: 20px;
     flex-direction: column;
     align-items: center;
-    // gap: 113px;
 
     .NoMatch {
-      // display: block;
       margin-block-start: 113px;
       font-size: 96px;
       margin-bottom: 113px;
@@ -43,7 +35,7 @@
     .page-inconnue {
       width: 260px;
       font-size: 18px;
-      font-weight: 500px;
+      font-weight: bold;
     }
     .back-home {
       font-size: 14px;
