--- a/kasa/src/components/Collaps/Collaps.scss
+++ b/kasa/src/components/Collaps/Collaps.scss
@@ -69,5 +69,10 @@ ul {
       justify-content: space-around;
       padding-right: 5px;
     }
+    .Arrow img {
+      width: 18px;
+      height: 18px;
+      padding-right: 5px;
+    }
   }
 }
