--- a/kasa/src/views/FicheLogement/FicheLogement.scss
+++ b/kasa/src/views/FicheLogement/FicheLogement.scss
@@ -99,6 +99,7 @@ section {
     }
     .HostSemiGlobal {
       gap: 10px;
+      align-items: center;
     }
     .HostGlobal {
       display: flex;
