--- a/kasa/src/components/Collaps/Collaps.scss
+++ b/kasa/src/components/Collaps/Collaps.scss
@@ -40,6 +40,31 @@ ul {
   stroke-width: 1px;
   stroke: black;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+ 
+  
+}
+//Ajout animation sur collaps
+.animate_collaps{
+  animation: animationCollaps 0.3s;
+}
+.animate_arrow {
+  animation :  animationCollapsArrow 1s;
+}
+@keyframes animationCollaps {
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity:1;
+  }
+}
+@keyframes animationCollapsArrow{
+  0%{
+    rotate: -180deg;
+  }
+  100%{
+    rotate:0deg;
+  }
 }
 @media screen and (max-width: 376px) {
   .CollapseItem {
